# Sun 16/1/2022 - 9:00AM
@TatChill123

+ Each event key now use a table contain a RBXScriptSignal and a function for after connected
+ Fixed methods and code behaviours
+ Added GetAvailableEvents() method

-------------------------------------------------------
# Sun 16/1/2022 - 8:00AM
@TatChill123

+ Added Disconnect() and Reconnect() method
+ Events now use have their own key
+ Type-scripting