@@ -3,40 +3,30 @@ leak.__index = leak
 
 type Function = {callback: Function}
 
-function leak.new(event: RBXScriptSignal)
+function leak.new(): table
     local self = setmetatable({
-        DefaultEvent = event;
         Events = {}
     }, leak)
-    self:Add({
-        dfe = {self.DefaultEvent ~= nil and self.DefaultEvent or nil, (function()
-            return self:DisconnectAll()
-        end)}
-    })
     return self
 end
 
-function leak:GetAvailableEvents()
-    local i = 0
-    for key, _ in pairs(self.Events) do
-        i += 1
-        print(i, key.." event")
-    end
-    i = nil
+function leak:GetAvailableEvents(): table
+    return self.Events
 end
 
-function leak:Add(t: {RBXScriptSignal: Function})
+function leak:Add(t: {eventName: {RBXScriptSignal: Function}})
     for key: string, events: {RBXScriptSignal: Function} in pairs(t) do
-         self.Events[key] = {events[1], events[1] ~= nil and type(events[2]) == "function" and events[1]:Connect(events[2])}
+        if events[1] == nil then continue end
+         self.Events[key] = {events[1], type(events[2]) == "function" and events[1]:Connect(events[2]) or warn(string.format("Argument #2 in %s must be a function, got %s", key, type(events[2])))}
     end
 end
 
 function leak:Disconnect(name: string, removal: any?)
     local event: {RBXScriptSignal: RBXScriptConnection} = self.Events[name]
     if not event then
-        return warn(string.format("Event \"%s\" is not exists!", name))
+        return warn(string.format("Event \"%s\" is not found!", name))
     end
-    if event[2] then event[2]:Disconnect() end
+    event[2]:Disconnect()
     event[2] = nil
     if removal then
         event[1] = nil
@@ -48,7 +38,7 @@ function leak:Reconnect(name: string, callback: Function)
     assert(type(callback) == "function", "Missing callback function or not a valid function!")
 
 	local event: {RBXScriptSignal: RBXScriptConnection} = self.Events[name]
-    if event == nil then
+    if not event then
         return warn(string.format("Event \"%s\" is not found!", name))
     end
     event[2] = event[1]:Connect(callback)
@@ -56,7 +46,7 @@ end
 
 function leak:DisconnectAll()
     for key: string, events: {RBXScriptSignal: RBXScriptConnection} in pairs(self.Events) do
-        if events[2] then events[2]:Disconnect() end
+        events[2]:Disconnect()
         events[2] = nil
         events[1] = nil
         self.Events[key] = nil
